change configuration files

--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@inotom/vue-go-top": "^1.1.0",
+    "@types/vuelidate": "^0.7.8",
     "aos": "^2.3.4",
     "axios": "^0.19.0",
+    "jsonwebtoken": "^8.5.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
@@ -23,6 +25,7 @@
     "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
+    "vue-socket.io-extended": "^4.0.1",
     "vue-zoomer": "^0.3.4",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
@@ -49,7 +52,7 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
     "sass": "^1.23.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
